--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,11 @@
 .text-header {
   font-family: "Montserrat Alternates", sans-serif;
   font-optical-sizing: auto;
+  font-weight: 500;
+}
+
+body {
+  color: #1c2635;
 }
 
 * {
