--- a/src/index.css
+++ b/src/index.css
@@ -21,5 +21,25 @@ body {
 
 .slick-track {
   margin-left: auto !important;
-  margin-right: auto !important;;
+  margin-right: auto !important;
+}
+
+.slick-dots {
+  bottom: 14px !important;
+}
+
+.slick-dots li {
+  margin: 0 !important;
+}
+
+
+.slick-dots li button:before {
+  transition: all !important;
+  color: #94a3b8 !important;
+}
+
+.slick-dots li.slick-active button:before {
+  transition: all !important;
+  opacity: 1 !important;
+  color: #5bc1ed !important;
 }
